# flappy_bird

./: Cargo.toml
src/: main.rs
