[package]
name = "flappy_bird"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.4.1"
bevy = "0.17.3"
bevy_asset_loader = { version = "0.24.0-rc.1" }
rand = "0.9.2"


[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
